# vison2md

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Docker使用指南.md  README.md  docker-compose.yml  mcp_config.json  mcp_config_claude.json  mcp_remote_config_template.json  pyproject.toml  remote_mcp_client.py  remote_mcp_usage_example.py  requirements-mcp.txt  requirements.txt  saved_configs.json  test_mcp_http.py  test_new_mcp_features.py  vision_tools_client.py  专门功能使用示例.py  合并文档功能说明.md  快速部署.sh  构建和部署指南.md  综合使用指南.md
scripts/: install_mcp_dependency.sh  serve.sh  start_mcp.sh  start_mcp_http.sh  test_remote_svc.py
server/: main.py  mcp_http_server.py  mcp_server.py
web/: app.js  index.html  style.css
